--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -13,7 +13,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/head": "^2.0.0",
-    "axios": "^1.7.1",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
@@ -22,6 +22,7 @@
     "jest-editor-support": "^32.0.0-beta.0",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
+    "toast": "^0.5.4",
     "typescript": "^5.4.5",
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
